date Version 3.00.56
* Added #include <wx/intl.h> to header file when using internationalization.
* Custom control now inherits from wxWindow, to provide common properties.
* FS#336 - "Incorrect ScrollBar Disconnection"
* FS#310 - "FB should not try to disconnect event handlers in dialog/frame's destructor."
  This is now optional, see the "disconnect_events" property of the Project object.

02/18/2008 Version 3.00.55 (RC7)
* FS#319 - "Problems with Non-ASCII characters"
* FS#318 - "wxChoice window_name not generated"
* FS#314 - "wxListBox + Clicking on wxLC_VIRTUAL causes infinite loop"
* FS#317 - "wxFB 3.0 RC6 doesn't show wxStaticBitmap when added (? is shown)"

02/01/2008 Version 3.00.54 (RC6)
* FS#308 - Bugs in non-interactive (-g) mode
  Note: stderr is not normally available on Windows for GUI apps.
        If -g is used, all logging goes to stderr and debug output.
		Either start the process with a pipe for stderr (most IDEs will do this
		for you), or use a Debug Viewer to watch the output.
* FS#311 - wxFB 3.0 RC5 still generating incorrect wxMenu(item) code

01/15/2008 Version 3.00.53 (RC5)
* Fixed missing C++ code generation for menu separators and menu item bitmaps.
* FS#290 - "Toolbarseparator leads to crash if the Bitmapsize differs from default."
^ Improved refresh of selection inside a scrolled window.
* Fixed crash on xrc generation for empty bitmap properties.
* FS#295 - "SashGravity not exported in XRC"
* FS#297 - "wxColourPicker not selectable on form"
* FS#298 - "wxFontPickerCtrl not selectable on form"
* FS#299 - "wxFilePickerCtrl not selectable on form"
* FS#300 - "wxDirPickerCtrl not selectable on form"
* FS#301 - "wxToggleButton value property not updated"
* Fixed C++ generation of the wxToggleButton "value" property
* FS#302 - "wxSpinCtrl initial property not updating"
* FS#294 - "wxRadioBox not selectable on form"

12/17/2007 Version 3.00.52 (RC4-1)
* Fixed application closing when double clicking on an .fpb file in Windows.